clean up and add readme

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cad-collab-tool",
-  "private": true,
+  "name": "cad-conversion",
   "version": "0.0.0",
   "type": "module",
+  "license": "ISC",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b --noCheck && vite build",
